feat(app): add virtual threads to handle http requests